# openai-c

./: .gitignore  CMakeLists.txt  cJSON.c  main.c  makefile  openai.c  openai.h
examples/: 00-completion.c  01-models.c  02-speech.c  03-transcribe.c  04-translate.c
include/: openai.h
